--- a/styles/style.css
+++ b/styles/style.css
@@ -44,7 +44,7 @@ ul {
 }
 
 .container {
-    max-width: 964px;
+    max-width: 980px;
     padding-right: 16px;
     margin-left: auto;
 }
@@ -77,7 +77,7 @@ body {
     display: flex;
     justify-content: center;
     flex-direction: column;
-    margin-bottom: 24px;
+    margin-bottom: 17px;
 }
 
 .sidebar-second {
@@ -124,6 +124,7 @@ body {
 
 .sidebar-second__block {
     margin: 0 auto;
+    margin-bottom: 12px;
     max-width: 250px;
 }
 
@@ -144,7 +145,6 @@ body {
     background-color: transparent;
     color: white;
     font-size: 13px;
-    font-size: 16px;
 }
 
 .sidebar-second__span {
@@ -155,6 +155,7 @@ body {
 /* menu */
 
 .sidebar-second__title {
+    margin-bottom: 4px;
     padding: 8px;
     padding-left: 44px;
     background-color: white;
@@ -166,6 +167,11 @@ body {
     color: #1981DC;
     font-size: 13px;
     font-weight: 600;
+}
+
+.sidebar-second__item {
+    margin-left: auto;
+    max-width: 214px;
 }
 
 .sidebar-second__item-button {
@@ -338,14 +344,15 @@ body {
     padding: 10px 16px;
     padding-bottom: 16px;
     width: 100%;
-    border-top: 4px solid #0F7EE6;
+    border-top: 5.5px solid #0F7EE6;
     border-radius: 4px;
     background-color: white;
 }
 
 .tabs-content__block {
-    margin-bottom: 12px;
+    margin-bottom: 13px;
     display: flex;
+    align-items: center;
     padding-bottom: 8px;
     border-bottom: 3px solid #0F7EE6;
 }
@@ -358,6 +365,7 @@ body {
 }
 
 .tabs-content__btn {
+    position: relative;
     padding: 12px 98px 12px 120px;
     background-color: #5CB85C;
     border-radius: 4px;
@@ -369,10 +377,22 @@ body {
     background-position: 98px 11px;
 }
 
+.tabs-content__btn span {
+    position: absolute;
+    right: -3px;
+    top: -3px;
+    padding: 0px 4px;
+    padding-top: 1px;
+    background-color: #FF1010;
+    color: white;
+    font-size: 12px;
+    border-radius: 100px;
+}
+
 /* section 1 - tabs */
 
 .tabs-content__d {
-    margin-bottom: 16px;
+    margin-bottom: 11px;
     padding-bottom: 16px;
     border-bottom: 1px solid #CECECE;
 }
@@ -392,7 +412,7 @@ body {
 }
 
 .tabs-content__item:not(:last-child) {
-    margin-bottom: 7px;
+    margin-bottom: 6px;
 }
 
 .tabs-content__label {
@@ -430,9 +450,15 @@ body {
     color: #5CB85C;
 }
 
+.tabs-content__span {
+    display: block;
+    margin-right: 4px;
+}
+
 .tabs-content__div {
-    padding: 0px 4px;
+    padding: 2px 7px;
     border: 1px solid #5CB85C;
+    border-radius: 2px;
 }
 
 .tabs-content__div:first-child {
@@ -441,11 +467,47 @@ body {
 
 .tabs-content__cor {
     display: flex;
+    align-items: center;
+}
+
+.tabs-content__d {
+    position: relative;
+}
+
+.content-booking {
+    position: absolute;
+    right: 0;
+    top: 0;
+}
+
+.content-booking__title {
+    margin-bottom: 3px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #0F7EE6;
+}
+
+.content-booking__d {
+    padding: 3px 8px;
+    font-size: 13px;
+    font-weight: bold;
+    color: #FF5757;
+    border: 1px solid #CECECE;
+    border-radius: 2px;
+}
+
+.content-booking__d:not(:last-child) {
+    margin-right: 2px;
+}
+
+.content-booking__block {
+    display: flex;
+    justify-content: flex-end;
 }
 
 /* tabs-cost */
 
-.tabs-cost__block span {
+.tabs-cost span {
     color: #0A2239;
     font-size: 15px;
     font-weight: 500;
@@ -472,7 +534,7 @@ body {
     padding-left: 20px;
 }
 
-.necessity-div__p {
+.necessity__descr {
     font-size: 13px;
     font-weight: 500;
     color: #FF5757;
@@ -492,7 +554,8 @@ body {
 
 .tourist {
     margin-bottom: 10px;
-    padding: 8px 16px;
+    padding: 5px 16px;
+    padding-bottom: 10px;
     background-color: white;
     border-radius: 4px;
     filter: drop-shadow(0 3.54px 4.8px rgb(3%, 0%, 18%, 4.72%));
@@ -500,7 +563,7 @@ body {
 }
 
 .tourist-top {
-    margin-bottom: 32px;
+    margin-bottom: 23px;
     display: flex;
     align-items: center;
     justify-content: space-between;
@@ -527,12 +590,19 @@ body {
 }
 
 .tourist-data {
-    margin-bottom: 16px;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
     grid-template-rows: 2;
     gap: 32px;
-    row-gap: 8px;
+    row-gap: 3px;
+}
+
+.tourist-data:last-child .tourist-data__block span {
+    margin-bottom: 4px;
+}
+
+.tourist-data:not(:last-child) {
+    margin-bottom: 16px;
 }
 
 .tourist__item:not(:last-child) {
@@ -574,7 +644,7 @@ body {
 .tourist-data:last-child .tourist-data__block {
     display: flex;
     flex-direction: row;
-    align-items: center;
+    align-items: flex-start;
 }
 
 .tourist-data:last-child .tourist-data__block span {
@@ -594,7 +664,7 @@ body {
 /* add */
 
 .add {
-    margin-bottom: 10px;
+    margin-bottom: 17px;
     padding: 16px;
     background-color: white;
     border-radius: 4px;
@@ -604,7 +674,7 @@ body {
 }
 
 .add__title {
-    margin-bottom: 8px;
+    margin-bottom: 9px;
     display: flex;
     justify-content: flex-end;
     color: #0F7EE6;
@@ -627,8 +697,8 @@ body {
 }
 
 .add__btn {
-    padding-top: 6px;
-    padding-bottom: 6px;
+    padding-top: 4px;
+    padding-bottom: 4px;
     width: 100%;
     color: white;
     font-size: 13px;
@@ -636,7 +706,7 @@ body {
     border-radius: 4px;
     background-image: url(../images/Union.svg);
     background-repeat: no-repeat;
-    background-position: 3px 7px;
+    background-position: 6px 8px;
 }
 
 /* composition */
@@ -667,7 +737,7 @@ body {
 .service-top {
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
+    margin-bottom: 22px;
 }
 
 .service-top__block {
@@ -706,6 +776,7 @@ body {
 
 .cruise-schedule__block {
     display: flex;
+    align-items: center;
     margin-right: 16px;
 }
 
@@ -733,6 +804,7 @@ body {
 
 .service__item {
     padding: 8px 16px;
+    padding-bottom: 17px;
     background-color: white;
     border-radius: 4px;
     margin-bottom: 10px;
@@ -759,6 +831,15 @@ body {
 .service-list__block {
     display: flex;
     flex-direction: row;
+    flex-wrap: wrap;
+}
+
+.service-descr__block span:first-child {
+    margin-bottom: 6px;
+}
+
+.service-excursion__item .service-list:last-child .service-item:nth-child(2) {
+    margin-bottom: 15px;
 }
 
 .service-list__block .service-list__span:nth-child(2) {
@@ -777,6 +858,10 @@ body {
 .service-list__span {
     font-size: 13px;
     color: #777777;
+}
+
+.service-list__descr {
+    width: 100%;
 }
 
 .service-item__p {
@@ -903,7 +988,7 @@ body {
     color: #0F7EE6;
 }
 
-.sum-block__block {
+.sum-block {
     display: flex;
     flex-direction: column;
     justify-content: flex-end;
@@ -941,7 +1026,7 @@ body {
 }
 
 .chat__block {
-    margin-bottom: 16px;
+    margin-bottom: 12px;
     width: 100%;
     padding: 4px 8px;
     border: 2px solid #5CB85C;
@@ -953,7 +1038,7 @@ body {
 }
 
 .chat-form__textarea {
-    margin-bottom: 8px;
+    margin-bottom: 4px;
     padding: 16px;
     width: 100%;
     max-height: 63px;
@@ -971,7 +1056,18 @@ body {
 .chat-form__btns {
     display: flex;
     flex-wrap: wrap;
-    max-width: 350px;
+}
+
+.chat-form__btns .list-format button, .chat-form__btns .text-format button {
+    all: unset;
+}
+
+.chat-form__btns {
+    padding-left: 17px;
+}
+
+.text-format button:not(:last-child) {
+ margin-right: 10px;
 }
 
 .file-download__btn:nth-child(1) {
@@ -988,11 +1084,11 @@ body {
 
 .text-format,
 .list-format {
-    margin-right: 10px;
+    margin-right: 26px;
 }
 
-.file-download button {
-    font-size: 13px;
+.list-format button:not(:last-child) {
+    margin-right: 8px;
 }
 
 .chat-form__block {
@@ -1013,11 +1109,15 @@ body {
 
 .chat-realizer,
 .chat-supervisor {
-    margin-bottom: 16px;
+    margin-bottom: 7px;
     background-color: #DFF7FF;
     padding: 16px;
     border: px solid #BBBBBB;
     border-radius: 4px;
+}
+
+.chat-supervisor p {
+    margin-bottom: 5px;
 }
 
 .chat-robot {
@@ -1026,6 +1126,10 @@ body {
     padding: 16px;
     border: 1px solid #BBBBBB;
     border-radius: 4px;
+}
+
+.chat-robot .chat-sms__descr {
+    line-height: 20px;
 }
 
 .chat-client {
@@ -1041,7 +1145,7 @@ body {
 }
 
 .chat-form__block {
-    margin-bottom: 16px;
+    margin-bottom: 10px;
 }
 
 .chat-top {
@@ -1050,7 +1154,7 @@ body {
     margin-bottom: 6px;
 }
 
-.chat-top__a {
+.chat-sms__a {
     color: #0F7EE6;
     font-size: 13px;
     font-style: bold;
@@ -1059,12 +1163,18 @@ body {
     padding-left: 15px;
 }
 
+.chat-sms__descr {
+    font-size: 13px;
+    color: #242424;
+}
+
 .chat-top__title {
     margin-right: 8px;
     padding: 4px 8px;
     color: #2F32FE;
     border: 1.5px solid #2F32FE;
     border-radius: 2px;
+    font-size: 13px;
 }
 
 .chat-client .chat-top__data span:nth-child(1) {
@@ -1085,7 +1195,7 @@ body {
 /* date */
 
 .chat-date {
-    margin-bottom: 16px;
+    margin-bottom: 7px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -1094,12 +1204,21 @@ body {
 .chat-date__block {
     padding-left: 18px;
     padding-right: 18px;
+    font-size: 14px;
+    font-weight: bold;
+    color: #676767;
 }
 
 .chat-date__span {
     width: 200px;
     display: block;
     border-bottom: 1px dotted #888;
+}
+
+.file-download__btn {
+    color: #777777;
+    font-size: 12px;
+    font-weight: 500;
 }
 
 /* 2 SECTION */
@@ -1121,7 +1240,6 @@ body {
 }
 
 .payment-top {
-    margin-bottom: 16px;
     padding: 8px 16px;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
@@ -1154,13 +1272,13 @@ body {
     border-radius: 2px;
 }
 
-.prepayment-data__block {
+.prepayment-data {
     margin-right: 8px;
     display: flex;
     font-size: 13px;
 }
 
-.prepayment-sum__block {
+.prepayment-sum {
     margin-right: 8px;
     padding: 4px;
     display: flex;
@@ -1171,7 +1289,7 @@ body {
     width: 100%;
 }
 
-.prepayment-paid__block {
+.prepayment-paid {
     padding-top: 4px;
     padding-bottom: 4px;
     max-width: 96px;
@@ -1184,12 +1302,12 @@ body {
     justify-content: center;
 }
 
-.prepayment-paid__block--success {
+.prepayment-paid--success {
     border: 1px solid #5CB85C;
     color: #5CB85C;
 }
 
-.prepayment-paid__block--error {
+.prepayment-paid--error {
     border: 1px solid #FF5757;
     color: #FF5757;
 }
@@ -1270,7 +1388,7 @@ body {
     font-size: 14px;
 }
 
-.pay-top__block {
+.pay-top {
     margin-bottom: 16px;
 }
 
