--- a/styles/style.css
+++ b/styles/style.css
@@ -62,6 +62,10 @@ body {
     display: block;
 }
 
+.sidebar-close {
+    display: none;
+}
+
 .wrapper .sidebar {
     background: var(--primary);
     position: fixed;
@@ -346,6 +350,7 @@ body {
     width: 100%;
     border-top: 5.5px solid #0F7EE6;
     border-radius: 4px;
+    border-top-left-radius: 0px;
     background-color: white;
 }
 
@@ -1058,8 +1063,14 @@ body {
     flex-wrap: wrap;
 }
 
-.chat-form__btns .list-format button, .chat-form__btns .text-format button {
+.chat-form__btns .list-format button,
+.chat-form__btns .text-format button {
     all: unset;
+    cursor: pointer;
+}
+
+.chat-form__btns button {
+    cursor: pointer;
 }
 
 .chat-form__btns {
@@ -1067,7 +1078,7 @@ body {
 }
 
 .text-format button:not(:last-child) {
- margin-right: 10px;
+    margin-right: 10px;
 }
 
 .file-download__btn:nth-child(1) {
@@ -1316,6 +1327,155 @@ body {
     margin-bottom: 8px;
 }
 
+/* 2 section mini */
+
+.payment-mini {
+    display: none;
+}
+
+.payment-chart,
+.payment-btns,
+.payment-loyalty {
+    margin-bottom: 8px;
+    padding: 16px;
+    background-color: white;
+    border-radius: 8px;
+}
+
+.payment-btns {
+    display: flex;
+    justify-content: center;
+}
+
+.payment-btns__btn {
+    padding: 10.5px;
+    max-width: 275px;
+    width: 100%;
+    background-color: #FF9600;
+    border-radius: 3px;
+
+    color: white;
+    font-size: 16px;
+    font-weight: 600;
+}
+
+.payment-btns__btn:first-child {
+    margin-right: 10px;
+}
+
+.payment-chart__title {
+    padding-left: 25px;
+    margin-bottom: 8px;
+    font-size: 14px;
+    color: #0F7EE6;
+
+    background-image: url(../images/icon-chart.svg);
+    background-repeat: no-repeat;
+}
+
+.payment-loyalty {
+    padding: 8px 16px;
+    display: flex;
+    justify-content: space-between;
+}
+
+.payment-loyalty button {
+    padding: 6px;
+    background-color: #FF9600;
+    border-radius: 3px;
+    color: white;
+    font-size: 13px;
+    font-weight: 500;
+    width: 100%;
+}
+
+.payment-discount,
+.payment-bonus {
+    padding: 12px;
+    width: 100%;
+}
+
+.payment-discount {
+    margin-right: 10px;
+    background-color: #E9F2FB;
+    border-radius: 8px;
+}
+
+.payment-bonus {
+    border: 1px solid #CECECE;
+    border-radius: 8px;
+}
+
+.payment-discount span:first-child, .payment-bonus__block span:first-child {
+    display: block;
+    margin-right: 8px;
+    font-size: 15px;
+    font-weight: 500;
+}
+
+.payment-discount__block, .payment-bonus__block {
+  display: flex;
+  margin-bottom: 6px;
+}
+
+
+.payment-discount span:last-child, .payment-bonus__block span:last-child {
+    font-size: 15px;
+    font-weight: 500;
+    color: #0F7EE6;
+}
+
+.chart-item__title {
+    display: block;
+    margin-bottom: 4px;
+    color: #0A2239;
+    font-size: 14px;
+    font-weight: 500;
+}
+
+.chart-item {
+    max-width: 308px;
+    width: 100%;
+}
+
+.chart-item:not(:last-child) {
+    margin-bottom: 8px;
+}
+
+.chart-item__block {
+    padding: 6px 8px;
+    display: flex;
+    align-items: center;
+    width: 100%;
+    background-color: #EDEDED;
+    border-radius: 4px;
+}
+
+.chart-item:not(:last-child) {
+    margin-right: 8px;
+}
+
+.chart-list {
+    margin-bottom: 8px;
+    display: flex;
+    align-items: center;
+    flex-wrap: wrap;
+}
+
+.payment-mini .refund-table {
+    padding: 2px 6px;
+    display: flex;
+    width: 100%;
+}
+
+.payment-mini .refund-table__block, .payment-mini .refund-rate {
+    width: 100%;
+}
+
+.payment-mini .refund-table__item:not(:last-child) {
+    margin-right: 8px;
+}
+
 /* refund */
 
 .refund-table {
@@ -1495,11 +1655,21 @@ body {
 }
 
 .booking__item {
+    position: relative;
     padding: 8px;
     padding-left: 48px;
     background-color: #E9F2FB;
     border-radius: 3px;
     width: 100%;
+}
+
+.booking__item a {
+    position: absolute;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    cursor: pointer;
 }
 
 .booking__item:nth-child(1) {
