--- a/styles/media.css
+++ b/styles/media.css
@@ -1,4 +1,20 @@
+@media (min-width: 1261px) {
+    .wrapper {
+        height: 100vh;
+    }
+
+}
+
 @media (max-width: 1044px) {
+
+    .main .main__container,
+    .header-top__container,
+    .header-bottom__container {
+        display: flex;
+        max-width: 92%;
+        margin-left: auto;
+    }
+
     .wrapper .sidebar-close {
         display: block;
     }
@@ -25,24 +41,47 @@
     .sidebar {
         display: none;
     }
-
-    .container {
-        max-width: 944px;
-    }
 }
 
-@media (max-width: 800px) {
+@media (max-width: 950px) {
 
     .payment-mini {
         display: block;
     }
-    
-    .payment {
-        display: none;
+
+    .refund-rate {
+        display: block;
+        width: 100%;
     }
 
-    .container {
-        max-width: 684px;
+    .refund-table {
+        max-width: 100%;
+    }
+
+    .sidebar-second__button span {
+        background-image: url(../images/Arrow-close-icon.svg);
+        margin-right: 0;
+        padding: 0;
+    }
+
+    .sidebar-second__button {
+        margin: 0 auto;
+        margin-bottom: 10px;
+        padding: 0;
+        padding-bottom: 10px;
+    
+        border-bottom: 1px solid #1A459C;
+        max-width: 31px;
+    }
+
+    .sidebar-icon {
+        position: static;
+        max-width: 31px;
+        margin: 0 auto;
+    }
+
+    .payment {
+        display: none;
     }
 
     .info {
