--- a/styles/style.css
+++ b/styles/style.css
@@ -49,6 +49,7 @@ ul {
 }
 
 body {
+    min-width: 768px;
     font-family: "Roboto", Arial, Helvetica, sans-serif;
     background-color: #EDEDED;
 }
@@ -67,13 +68,17 @@ body {
 
 .wrapper .sidebar {
     background: var(--primary);
-    position: static;
+    position: fixed;
     top: 0;
     left: 0;
     width: 266px;
     height: 100%;
     padding: 26px 0;
     transition: all 0.5s ease;
+}
+
+.container-wrapper{
+    padding-left: 266px;
 }
 
 .sidebar-icon {
@@ -150,7 +155,7 @@ body {
 
 .sidebar-second__block {
     margin: 0 auto;
-    margin-bottom: 7px;
+    margin-bottom: 12px;
     max-width: 250px;
 }
 
@@ -162,7 +167,6 @@ body {
 .sidebar-second__button {
     display: flex;
     align-items: center;
-    margin-bottom: 12px;
     padding: 6px;
     ;
     text-align: left;
@@ -337,6 +341,10 @@ body {
 
 /* main */
 
+.section-container {
+    display: flex;
+}
+
 .main .main__container,
 .header-top__container,
 .header-bottom__container {
@@ -356,13 +364,14 @@ body {
     padding-left: 45px;
 }
 
-.main__container {
-    display: flex;
+.main .main__container {
+    overflow: visible;
 }
 
 .info {
     margin-right: 16px;
     width: 100%;
+    height: 100%;
 }
 
 .tabs {
@@ -402,11 +411,11 @@ body {
     margin-right: 4px;
 }
 
-.tabs-content {
-    padding: 10px 16px;
-    padding-bottom: 16px;
+.tab {
     width: 100%;
     border-top: 5.5px solid #0F7EE6;
+    padding-top: 10px;
+    padding: 10px 16px;
     border-radius: 4px;
     border-top-left-radius: 0px;
     background-color: white;
@@ -1325,7 +1334,13 @@ body {
 .payment {
     max-width: 350px;
     width: 100%;
-    padding-top: 35px;
+    position: -webkit-sticky;
+    position: sticky;
+    align-self: flex-start;
+    top: 0;
+    right: 0;
+    left: 0;
+    bottom: 0;
 }
 
 .payment-table {
