--- a/styles/media.css
+++ b/styles/media.css
@@ -1,4 +1,22 @@
 
+@media (min-width: 1400px) {
+    .add {
+      flex-direction: row;
+      align-items: center;
+    }
+
+    .add__title {
+        align-items: center;
+        width: 100%;
+        margin-right: 20px;
+        margin-bottom: 0;
+    }
+
+    .add__list {
+        align-items: center;
+        width: 100%;
+    }
+}
 
 @media (max-width: 1300px) {
 
@@ -27,7 +45,7 @@
         left: 0;
         width: 52px;
         height: 100%;
-        padding: 20px 0;
+        padding: 24px 0;
         transition: all 0.5s ease;
     }
 
@@ -37,6 +55,22 @@
 
     .sidebar-second__button {
         padding-top: 10px;
+    }
+
+    .sidebar-second__button {
+        margin: 0 auto;
+        margin-bottom: 10px;
+        padding: 0;
+        padding-bottom: 10px;
+    
+        border-bottom: 1px solid #1A459C;
+        max-width: 31px;
+    }
+
+    .sidebar-icon {
+        position: static;
+        max-width: 31px;
+        margin: 0 auto;
     }
 
 }
@@ -54,22 +88,6 @@
 
     .refund-table {
         max-width: 100%;
-    }
-
-    .sidebar-second__button {
-        margin: 0 auto;
-        margin-bottom: 10px;
-        padding: 0;
-        padding-bottom: 10px;
-    
-        border-bottom: 1px solid #1A459C;
-        max-width: 31px;
-    }
-
-    .sidebar-icon {
-        position: static;
-        max-width: 31px;
-        margin: 0 auto;
     }
 
     .payment {
