--- a/styles/media.css
+++ b/styles/media.css
@@ -1,8 +1,7 @@
-
 @media (min-width: 1400px) {
     .add {
-      flex-direction: row;
-      align-items: center;
+        flex-direction: row;
+        align-items: center;
     }
 
     .add__title {
@@ -18,7 +17,7 @@
     }
 }
 
-@media (max-width: 1300px) {
+@media (max-width: 1200px) {
 
     .container-wrapper {
         padding-left: 50px;
@@ -45,12 +44,15 @@
         left: 0;
         width: 52px;
         height: 100%;
-        padding: 24px 0;
+        padding: 25px 0;
         transition: all 0.5s ease;
     }
 
     .sidebar-second {
-        margin: 0 auto;
+        display: flex;
+        justify-content: center;
+        flex-direction: column;
+        align-items: center;
     }
 
     .sidebar-second__button {
@@ -58,19 +60,20 @@
     }
 
     .sidebar-second__button {
-        margin: 0 auto;
-        margin-bottom: 10px;
+        display: flex;
+        justify-content: center;
+        margin-bottom: 11.5px;
         padding: 0;
-        padding-bottom: 10px;
-    
+        padding-bottom: 11.5px;
+
         border-bottom: 1px solid #1A459C;
-        max-width: 31px;
+        max-width: 40px;
     }
 
     .sidebar-icon {
         position: static;
         max-width: 31px;
-        margin: 0 auto;
+
     }
 
 }
