--- a/styles/style.css
+++ b/styles/style.css
@@ -138,6 +138,10 @@ body {
     margin-bottom: 25px;
 }
 
+.sidebar-icon {
+    border-radius: 4px;
+}
+
 .sidebar-first__button {
     display: flex;
     justify-content: center;
@@ -159,13 +163,13 @@ body {
 .sidebar-second__block:last-child {
     max-width: 100%;
     padding-left: 8px;
+    margin-bottom: 12px;
 }
 
 .sidebar-second__button {
+    margin-bottom: 12px;
     display: flex;
     align-items: center;
-    padding: 6px;
-    ;
     text-align: left;
     width: 100%;
     background-color: transparent;
@@ -414,6 +418,7 @@ body {
 }
 
 .tab {
+    margin-bottom: 10px;
     width: 100%;
     border-top: 5.5px solid #0F7EE6;
     padding-top: 10px;
@@ -636,19 +641,27 @@ body {
 
 .tourist {
     margin-bottom: 10px;
-    padding: 5px 16px;
+    padding-top: 0;
     padding-bottom: 10px;
-    background-color: white;
+    background-color: #F6F6F6;
     border-radius: 4px;
     filter: drop-shadow(0 3.54px 4.8px rgb(3%, 0%, 18%, 4.72%));
     filter: drop-shadow(0 7px 11px rgb(3%, 0%, 18%, 7%));
 }
 
 .tourist-top {
-    margin-bottom: 23px;
+    padding: 8px 16px;
     display: flex;
     align-items: center;
     justify-content: space-between;
+}
+
+.tourist__list {
+    padding: 5px 16px;
+}
+
+.tourist-top {
+    background-color: white;
 }
 
 .tourist-top__title {
@@ -777,12 +790,11 @@ body {
 
 .add__list {
     display: flex;
-    justify-content: space-between;
+    justify-content: flex-end;
 }
 
 .add__item {
-    max-width: 106px;
-    width: 100%;
+    width: 106px;
 }
 
 .add__btn {
@@ -836,16 +848,21 @@ body {
 /* STYLIZATION OF SERVICES */
 
 .service-top {
-    padding: 8px 0;
+    margin-bottom: 16px;
+    padding: 8px 16px;
     background-color: white;
     display: flex;
     justify-content: space-between;
-    margin-bottom: 20px;
 }
 
 
 .service-top__block {
     display: flex;
+}
+
+.service-cruise, .service-transfer, .service-excursion, .service-hotel, .service-airline, .service-insurance {
+    padding-left: 16px;
+    padding-right: 16px;
 }
 
 .service-top__span {
@@ -872,10 +889,6 @@ body {
     background-color: transparent;
 }
 
-.service__item {
-    padding-left: 16px;
-    padding-right: 16px;
-}
 
 /* cruise-schedule */
 
@@ -913,7 +926,6 @@ body {
 /* service-list */
 
 .service__item {
-    padding: 8px 16px;
     padding-bottom: 17px;
     padding-top: 0;
     background-color: #F6F6F6;
@@ -925,10 +937,26 @@ body {
 }
 
 .service-list {
+    display: flex;
+    flex-wrap: wrap;
     padding-bottom: 16px;
     border-bottom: 1px dotted #888;
     margin-bottom: 16px;
     width: 100%;
+}
+
+.service-insurance__item .service-list {
+    display: block;
+}
+
+.service-insurance__item .service-item__block:last-child {
+    margin-left: auto;
+    justify-content: flex-end;
+}
+
+.service-insurance__status {
+  margin-left: auto;
+  justify-content: flex-end;
 }
 
 .service-insurance .service-list {
