--- a/styles/style.css
+++ b/styles/style.css
@@ -176,6 +176,7 @@ body {
     border-radius: 3px;
     color: white;
     font-size: 13px;
+    cursor: pointer;
 }
 
 .sidebar-second__button span {
@@ -272,6 +273,7 @@ body {
     border-radius: 4px;
     color: white;
     font-size: 14px;
+    cursor: pointer;
 }
 
 .header-top__title {
@@ -407,6 +409,7 @@ body {
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
     transition:  ease-in-out .3s ;
+    cursor: pointer;
 }
 
 .tabs__btn:hover {
@@ -462,6 +465,7 @@ body {
     font-size: 14px;
     font-weight: 700;
     background-position: 89px 11px;
+    cursor: pointer;
 }
 
 .tabs-content__btn svg {
@@ -641,6 +645,7 @@ body {
     border-radius: 4px;
     font-size: 13px;
     font-weight: 500;
+    cursor: pointer;
 }
 
 /* tourist-top */
@@ -807,6 +812,7 @@ body {
     display: flex;
     justify-content: center;
     transition: ease-in-out .3s;
+    cursor: pointer;
 }
 
 .add__btn:hover {
@@ -903,6 +909,7 @@ body {
     background-repeat: no-repeat;
     background-position: left;
     background-color: transparent;
+    cursor: pointer;
 }
 
 
@@ -938,6 +945,7 @@ body {
     color: #0F7EE6;
     border-radius: 4px;
     transition:  ease-in-out .3s;
+    cursor: pointer;
 }
 
 .cruise-schedule__btn:hover {
@@ -1290,6 +1298,7 @@ body {
     color: white;
     max-height: 98px;
     transition:  ease-in-out .3s;
+    cursor: pointer;
 }
 
 .chat-form__btn:hover {
@@ -1410,6 +1419,7 @@ body {
     font-size: 12px;
     font-weight: 500;
     background-color: transparent;
+    cursor: pointer;
 }
 
 /* 2 SECTION */
@@ -1549,6 +1559,7 @@ body {
     font-size: 16px;
     font-weight: 600;
     transition: ease-in-out .3s;
+    cursor: pointer;
 }
 
 .payment-btns__btn:hover {
@@ -1609,6 +1620,7 @@ body {
     background-color: #FF9600;
     border-radius: 4px;
     transition: .3s ease-in-out;
+    cursor: pointer;
 }
 
 .payment-discount__btn:hover {
@@ -1857,6 +1869,15 @@ body {
     color: white;
     font-weight: 500;
     font-size: 13px;
+    transition: ease-in-out .3s;
+    display: flex;
+    justify-content: center;
+    cursor: pointer;
+}
+
+.loyalty__btn:hover,
+.bonus__btn:hover {
+    background-color: #E55300;
 }
 
 /* bonus */
