--- a/styles/media.css
+++ b/styles/media.css
@@ -73,12 +73,17 @@
     .sidebar-icon {
         position: static;
         max-width: 31px;
-
     }
-
 }
 
 @media (max-width: 968px) {
+    .service {
+        display: none;
+    }
+
+    .service-package {
+        display: block;
+    }
 
     .payment-mini {
         display: block;
