--- a/styles/style.css
+++ b/styles/style.css
@@ -2,10 +2,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
 
 :root {
-    --font: "Muller", Arial, Helvetica, sans-serif;
-    --black: var(--black, #121723);
+    --font: "Roboto";
+    --black: var(--black, #0A2239);
     --primary: #1981DC;
 }
+
+/* —  —  —  —  — Полоса сверху —  —  —  —  —  */
 
 html {
     box-sizing: border-box;
@@ -177,6 +179,15 @@ body {
     color: white;
     font-size: 13px;
     cursor: pointer;
+    transition: ease-in-out .3s;
+}
+
+.sidebar-second__button:hover {
+    text-decoration: underline;
+}
+
+.sidebar-second__button:hover span {
+    background-color: #0f295d;
 }
 
 .sidebar-second__button span {
@@ -245,8 +256,8 @@ body {
 }
 
 .header-top {
-    padding-top: 5px;
-    padding-bottom: 4px;
+    padding-top: 2px;
+    padding-bottom: 2px;
     margin-bottom: 18px;
     width: 100%;
     background-color: #4990FB;
@@ -263,7 +274,7 @@ body {
 }
 
 .header-top__btn {
-    max-height: 123px;
+    height: 28px;
     background-color: #1A459C;
     background-image: url(../images/icon-user.svg);
     background-repeat: no-repeat;
@@ -291,7 +302,7 @@ body {
     align-items: left center;
     padding: 0;
     padding-left: 48px;
-    height: 34px;
+    height: 32px;
 }
 
 /* header bottom */
@@ -411,7 +422,7 @@ body {
     background-color: #6AACEA;
     border-top-left-radius: 4px;
     border-top-right-radius: 4px;
-    transition:  ease-in-out .3s ;
+    transition: ease-in-out .3s;
     cursor: pointer;
 }
 
@@ -469,7 +480,13 @@ body {
     font-weight: 700;
     background-position: 89px 11px;
     cursor: pointer;
+    transition: ease-in-out .3s;
 }
+
+.tabs-content__btn:hover {
+    background-color: #428a42;
+}
+
 
 .tabs-content__btn svg {
     margin-right: 6px;
@@ -608,6 +625,7 @@ body {
 /* tabs-cost */
 
 .tabs-cost span {
+    padding-bottom: 8px;
     color: #0A2239;
     font-size: 15px;
     font-weight: 500;
@@ -649,7 +667,13 @@ body {
     font-size: 13px;
     font-weight: 500;
     cursor: pointer;
+    transition: ease-in-out .3s;
 }
+
+.necessity__btn:hover {
+    background-color: #d54949;
+}
+
 
 /* tourist-top */
 
@@ -668,6 +692,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    border-radius: 4px 4px 0px 0px;
 }
 
 .tourist__list {
@@ -859,6 +884,7 @@ body {
 
 .composition__list {
     display: flex;
+    font-size: 15px;
 }
 
 .composition__item:not(:last-child) {
@@ -867,14 +893,24 @@ body {
 
 /* STYLIZATION OF SERVICES */
 
+.service-block {
+    display: flex;
+    flex-wrap: wrap;
+}
+
 .service-top {
     margin-bottom: 16px;
     padding: 8px 16px;
     background-color: white;
     display: flex;
     justify-content: space-between;
+    border-radius: 4px 4px 0px 0px;
 }
 
+.service-insurance__list {
+    padding-left: 16px;
+    padding-right: 16px;
+}
 
 .service-top__block {
     display: flex;
@@ -884,8 +920,7 @@ body {
 .service-transfer,
 .service-excursion,
 .service-hotel,
-.service-airline,
-.service-insurance {
+.service-airline {
     padding-left: 16px;
     padding-right: 16px;
 }
@@ -901,12 +936,14 @@ body {
     margin-bottom: 20px;
     display: flex;
     align-items: center;
-    padding: 12px;
     background-color: #E7E7E7;
 
     background-image: url(../images/icon-warning-new.svg);
- background-repeat: no-repeat;
+    background-repeat: no-repeat;
     background-position: 12px 10px;
+
+    padding: 8px;
+    border-radius: 4px;
 }
 
 .service-warn label span {
@@ -927,6 +964,9 @@ body {
     font-size: 15px;
     font-weight: bold;
     color: #0F7EE6;
+}
+.service-package .service-insurance .service-cruise__title {
+    padding-left: 16px;
 }
 
 .service-warn__form {
@@ -950,7 +990,7 @@ body {
     cursor: pointer;
     transition: ease-in-out .3s;
     border-radius: 2px;
-    
+
 }
 
 .service-warn__btn:hover {
@@ -971,7 +1011,6 @@ body {
 }
 
 .service-top__btn {
-    padding-left: 19px;
     color: #0F7EE6;
     font-size: 13px;
     font-weight: 500;
@@ -980,6 +1019,10 @@ body {
     background-position: left;
     background-color: transparent;
     cursor: pointer;
+
+    padding-left: 22px;
+    text-decoration: underline;
+    line-height: 17px;
 }
 
 /* cruise-schedule */
@@ -1013,12 +1056,12 @@ body {
     background-color: #E3E6EA;
     color: #0F7EE6;
     border-radius: 4px;
-    transition:  ease-in-out .3s;
+    transition: ease-in-out .3s;
     cursor: pointer;
 }
 
 .cruise-schedule__btn:hover {
-  background-color: #BBD9F5;
+    background-color: #BBD9F5;
 }
 
 /* service-list */
@@ -1041,6 +1084,8 @@ body {
     border-bottom: 1px dotted #888;
     margin-bottom: 16px;
     width: 100%;
+
+    column-gap: 32px;
 }
 
 .service-insurance__item .service-list {
@@ -1230,6 +1275,7 @@ body {
     background-color: #fff;
     display: flex;
     justify-content: flex-end;
+    border-radius: 4px;
 }
 
 .sum__span {
@@ -1307,6 +1353,7 @@ body {
     display: flex;
     flex-wrap: wrap;
     max-width: 350px;
+    row-gap: 8px;
 }
 
 .chat-form__btns .list-format div,
@@ -1366,7 +1413,7 @@ body {
     border-radius: 2px;
     color: white;
     max-height: 98px;
-    transition:  ease-in-out .3s;
+    transition: ease-in-out .3s;
     cursor: pointer;
 }
 
@@ -1379,7 +1426,7 @@ body {
     margin-bottom: 7px;
     background-color: #DFF7FF;
     padding: 16px;
-    border: px solid #BBBBBB;
+    border: 1px solid #BBBBBB;
     border-radius: 4px;
 }
 
@@ -1417,7 +1464,7 @@ body {
 
 .chat-top {
     display: flex;
-    align-items: center;
+    align-items: baseline;
     margin-bottom: 6px;
 }
 
@@ -1483,6 +1530,11 @@ body {
     border-bottom: 1px dotted #888;
 }
 
+.file-download {
+    display: flex;
+    align-items: center;
+}
+
 .file-download__btn {
     color: #777777;
     font-size: 12px;
@@ -1495,6 +1547,7 @@ body {
 
 .payment {
     max-width: 350px;
+    min-width: 350px;
     width: 100%;
     position: -webkit-sticky;
     position: sticky;
@@ -1544,6 +1597,10 @@ body {
     font-weight: 500;
 }
 
+.refund-table__title {
+    font-size: 13px;
+}
+
 .prepayment-item {
     padding: 5px 8px;
     background-color: #EDEDED;
@@ -1588,7 +1645,7 @@ body {
 
 .prepayment-paid--error {
     border: 1px solid #FF5757;
-    color: #FF5757;
+    color: #FF0000;
 }
 
 .prepayment-table__item {
@@ -1701,7 +1758,7 @@ body {
     justify-content: flex-end;
     align-items: center;
     padding-left: 16px;
-} 
+}
 
 .payment-btns__btn {
     background-image: url(../images/wrap.svg);
@@ -1778,7 +1835,7 @@ body {
 }
 
 .payment-mini .refund-table {
-    padding: 2px 6px;
+    padding: 1px;
     display: grid;
     grid-template-columns: repeat(4, 1fr);
     width: 100%;
@@ -1799,6 +1856,10 @@ body {
 
 .payment-mini .refund-table__item:not(:last-child) {
     margin-right: 8px;
+}
+
+.refund-table__item:last-child {
+    margin-bottom: 0px;
 }
 
 /* refund */
@@ -1822,6 +1883,7 @@ body {
 .refund-date {
     display: flex;
     margin-right: 4px;
+    gap: 4px;
 }
 
 .refund-table__block {
@@ -1846,11 +1908,16 @@ body {
 .refund-sum {
     display: flex;
     justify-content: center;
-    max-width: 70px;
     margin-right: 4px;
-    padding: 1px;
     background-color: white;
     width: 100%;
+
+    font-weight: 700;
+    width: 76px;
+    border-radius: 4px;
+    padding: 3px 5px;
+    min-width: 76px;
+    max-width: none;
 }
 
 .refund-rate {
@@ -1921,6 +1988,7 @@ body {
 
 .loyalty__span {
     font-size: 15px;
+    font-weight: 500;
 }
 
 .loyalty__block span:last-child {
@@ -2043,4 +2111,9 @@ body {
     color: #0F7EE6;
     font-weight: 600;
     font-size: 14px;
+}
+
+.service-insurance .service-excursion__list {
+    padding-left: 16px;
+    padding-right: 16px;
 }
